[build-system]
requires = ["flit_core>=3.7", "tensorflow>=2.8", "opencv-python>=4.6", "numba>=0.56", "buteo>=0.7.4"]
build-backend = "flit_core.buildapi"

[project]
name = "s2super"
version = "1.0.0"
authors = [
  { name="Casper Fibaek", email="casperfibaek@gmail.com" },
]
description = "SuperResolution of Sentinel2 imagery."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/casperfibaek/super_res_s2"
"Bug Tracker" = "https://github.com/casperfibaek/super_res_s2/issues"