[build-system]
requires = ["flit_core>=3.7", "tensorflow>=2.8", "buteo>=0.7.64"]
build-backend = "flit_core.buildapi"

[project]
name = "s2super"
version = "1.2.29"
authors = [
  { name="Casper Fibaek", email="casperfibaek@gmail.com" },
]
description = "SuperResolution of Sentinel2 imagery."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "tensorflow>=2.8",
  "buteo>=0.7.65",
]

[project.urls]
"Homepage" = "https://github.com/casperfibaek/super_res_s2"
"Bug Tracker" = "https://github.com/casperfibaek/super_res_s2/issues"